--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to My Azure Static Website</title>
+    <title>Welcome to My GitHub Pages Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <div class="container">
-        <h1>Hello, Azure!</h1>
-        <p>This is a simple static website hosted on Azure Storage.</p>
+        <h1>Hello, GitHub Pages!</h1>
+        <p>This is a simple static website hosted on GitHub Pages.</p>
+        <p>🔗 View the source code on https://github.com/chikeegbuniwe/Azure-Static-Website.</p>
     </div>
 </body>
 </html>
