--- a/about.html
+++ b/about.html
@@ -2,18 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>About Chike Egbuniwe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="contact.html">Contact</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <div class="container">
-        <h1>About This Project</h1>
-        <p>This is a placeholder About page. Here you can describe the purpose of your website, your background, or any other relevant information.</p>
+        <h1>About Me</h1>
+        <p>Hi, I'm <strong>Chike Egbuniwe</strong>, an IT Operations professional based in Longford, Ireland. I currently work as a Contingent Worker and have a strong passion for cloud technologies, especially Microsoft Azure.</p>
+        <p>I've completed the AZ-900 certification and am actively expanding my skills through hands-on labs and projects. My goal is to become proficient in Azure administration and architecture, and contribute to cloud-based solutions.</p>
+        <p>This website showcases my learning journey and projects as I explore the world of cloud computing.</p>
     </div>
 </body>
 </html>
