--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact</title>
+    <title>Contact Chike Egbuniwe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="contact.html">Contact</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </nav>
     <div class="container">
-        <h1>Contact Information</h1>
-        <p>This is a placeholder Contact page. You can include your email address, social media links, or a contact form here.</p>
+        <h1>Contact Me</h1>
+        <p>If you'd like to connect or collaborate, feel free to reach out:</p>
+        <ul>
+            <li>Email: <a href="mailto:chike.egbuniwe@example.com">chike.egbuniwe@example.com</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/chike-egbuniwe" target="_blank">linkedin.com/in/chike-egbuniwe</a></li>
+            <li>GitHub: <a href="https://github.com/chikeegbuniwe" target="_blank">github.com/chikeegbuniwe</a></li>
+        </ul>
     </div>
 </body>
 </html>
